Refactor with new component

--- a/src/styles/studentsForm.scss
+++ b/src/styles/studentsForm.scss
@@ -34,13 +34,12 @@ body {
   padding: 12px;
   border: 1px solid $ligthStrong;
   border-radius: 6px;
-  box-sizing: border-box;
   margin-top: 10px;
   margin-bottom: 16px;
   
 }
 
-.container {
+.inputContainer {
   position: relative;
   border-radius: 5px;
   background-color: $ligth;
